Ajuste documentação
